{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 25,
  "lineage": "c8cfb8bb-371f-c0ca-9c8b-5b75a39c6d20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009a21a9a37dbccf3",
            "arn": "arn:aws:ec2:us-east-1:910597804161:elastic-ip/eipalloc-009a21a9a37dbccf3",
            "association_id": "eipassoc-07226b48e579064f3",
            "domain": "vpc",
            "id": "eipalloc-009a21a9a37dbccf3",
            "instance": "i-01ba6c4d2a88874dc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09e81c89e2dd8852f",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-52-55-242-148.compute-1.amazonaws.com",
            "public_ip": "52.55.242.148",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-frontend-innovatech"
            },
            "tags_all": {
              "Name": "eip-frontend-innovatech"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.ec2_frontend",
            "aws_key_pair.key_pair",
            "aws_security_group.sg_frontend",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ae342fb7b4052f",
            "arn": "arn:aws:ec2:us-east-1:910597804161:elastic-ip/eipalloc-0e8ae342fb7b4052f",
            "association_id": "eipassoc-04011b69f9088af36",
            "domain": "vpc",
            "id": "eipalloc-0e8ae342fb7b4052f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07e5fdf391128e602",
            "private_dns": "ip-10-0-1-230.ec2.internal",
            "private_ip": "10.0.1.230",
            "public_dns": "ec2-44-194-41-50.compute-1.amazonaws.com",
            "public_ip": "44.194.41.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-innovatech"
            },
            "tags_all": {
              "Name": "eip-nat-innovatech"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:910597804161:instance/i-09360bbff5da9ad2c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09360bbff5da9ad2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-ep2-innovatech",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da7f0050cd2a2ba2",
            "private_dns": "ip-10-0-2-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-056165a05ac878744",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d89c266bcba3fd22",
            "tags": {
              "Name": "ec2-backend-innovatech"
            },
            "tags_all": {
              "Name": "ec2-backend-innovatech"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6a9a541d0672399"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.sg_backend",
            "aws_security_group.sg_frontend",
            "aws_subnet.subred_privada",
            "aws_vpc.vpc_innovatech",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e801948462f718a",
            "arn": "arn:aws:ec2:us-east-1:910597804161:instance/i-01ba6c4d2a88874dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ba6c4d2a88874dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "clave-ep2-innovatech",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e81c89e2dd8852f",
            "private_dns": "ip-10-0-1-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.135",
            "public_dns": "ec2-98-94-84-111.compute-1.amazonaws.com",
            "public_ip": "98.94.84.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d953fc367c2287a8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cc6b5889f3d101a",
            "tags": {
              "Name": "ec2-frontend-innovatech"
            },
            "tags_all": {
              "Name": "ec2-frontend-innovatech"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080a7d31b6fa6edd5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.sg_frontend",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech",
            "tls_private_key.clave_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:internet-gateway/igw-0d8a8aba013b551db",
            "id": "igw-0d8a8aba013b551db",
            "owner_id": "910597804161",
            "tags": {
              "Name": "igw-innovatech"
            },
            "tags_all": {
              "Name": "igw-innovatech"
            },
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8ae342fb7b4052f",
            "association_id": "eipassoc-04011b69f9088af36",
            "connectivity_type": "public",
            "id": "nat-0ad079f8018e24f89",
            "network_interface_id": "eni-07e5fdf391128e602",
            "private_ip": "10.0.1.230",
            "public_ip": "44.194.41.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07cc6b5889f3d101a",
            "tags": {
              "Name": "nat-gw-innovatech"
            },
            "tags_all": {
              "Name": "nat-gw-innovatech"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:route-table/rtb-0ff9039c733c18f6d",
            "id": "rtb-0ff9039c733c18f6d",
            "owner_id": "910597804161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad079f8018e24f89",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:route-table/rtb-0c84cfc3479b98b00",
            "id": "rtb-0c84cfc3479b98b00",
            "owner_id": "910597804161",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8a8aba013b551db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-publica"
            },
            "tags_all": {
              "Name": "rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3155d606a3fd201",
            "route_table_id": "rtb-0ff9039c733c18f6d",
            "subnet_id": "subnet-0d89c266bcba3fd22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_privada",
            "aws_subnet.subred_privada",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e13aad12fcc2abb2",
            "route_table_id": "rtb-0c84cfc3479b98b00",
            "subnet_id": "subnet-07cc6b5889f3d101a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_publica",
            "aws_subnet.subred_publica",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:security-group/sg-0d6a9a541d0672399",
            "description": "Trafico al Backend solo desde el Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6a9a541d0672399",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "API Backend desde Frontend",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080a7d31b6fa6edd5"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "ICMP diagnostico",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-080a7d31b6fa6edd5"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "SSH desde Frontend (Jump Host para CI/CD)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080a7d31b6fa6edd5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-ep2-sg",
            "name_prefix": "",
            "owner_id": "910597804161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-backend"
            },
            "tags_all": {
              "Name": "sg-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_frontend",
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:security-group/sg-080a7d31b6fa6edd5",
            "description": "Trafico web publico hacia el contenedor Frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a7d31b6fa6edd5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP publico",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS publico",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH para deploy via GitHub Actions",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-ep2-sg",
            "name_prefix": "",
            "owner_id": "910597804161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-frontend"
            },
            "tags_all": {
              "Name": "sg-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:subnet/subnet-0d89c266bcba3fd22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d89c266bcba3fd22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "910597804161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada-backend"
            },
            "tags_all": {
              "Name": "subred-privada-backend"
            },
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:subnet/subnet-07cc6b5889f3d101a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc6b5889f3d101a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "910597804161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica-frontend"
            },
            "tags_all": {
              "Name": "subred-publica-frontend"
            },
            "vpc_id": "vpc-025f5c1b9f6fc915e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_innovatech"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_innovatech",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:910597804161:vpc/vpc-025f5c1b9f6fc915e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0872fa6699152e29c",
            "default_route_table_id": "rtb-0137f9f173b936aa9",
            "default_security_group_id": "sg-0ebbdb0003c9c9203",
            "dhcp_options_id": "dopt-0e8f549e2aa467e10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025f5c1b9f6fc915e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0137f9f173b936aa9",
            "owner_id": "910597804161",
            "tags": {
              "Name": "vpc-innovatech-ep2"
            },
            "tags_all": {
              "Name": "vpc-innovatech-ep2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}